[gd_scene load_steps=8 format=3 uid="uid://coxtxpj8ay5h5"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_iep3p"]
[ext_resource type="Texture2D" uid="uid://lcin0arro3vm" path="res://assets/32rogues/chars/rogue.png" id="2_3osq1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e4iqf"]
radius = 134.733

[sub_resource type="Animation" id="Animation_mpqpp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ffdua"]
resource_name = "hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(100, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gibbi"]
resource_name = "invisibility"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qtu5k"]
_data = {
"RESET": SubResource("Animation_mpqpp"),
"hit": SubResource("Animation_ffdua"),
"invisibility": SubResource("Animation_gibbi")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_iep3p")

[node name="Character" type="Sprite2D" parent="."]
scale = Vector2(15, 15)
texture = ExtResource("2_3osq1")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_e4iqf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_qtu5k")
}
speed_scale = 4.0

[node name="RageTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="DamageNumberOrigin" type="Node2D" parent="."]
position = Vector2(-116, -200)

[node name="Label" type="Label" parent="."]
offset_left = -21.0
offset_top = -291.0
offset_right = 19.0
offset_bottom = -231.0
theme_override_font_sizes/font_size = 64

[node name="EnemyDebuffTimers" type="Node2D" parent="."]

[node name="PoisonDebuffTimer" type="Timer" parent="EnemyDebuffTimers"]
unique_name_in_owner = true

[node name="PoisonDebuffTimerEnd" type="Timer" parent="EnemyDebuffTimers"]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="RageTimer" to="." method="_on_rage_timer_timeout"]
[connection signal="timeout" from="EnemyDebuffTimers/PoisonDebuffTimer" to="." method="_on_poison_debuff_timer_timeout"]
[connection signal="timeout" from="EnemyDebuffTimers/PoisonDebuffTimerEnd" to="." method="_on_poison_debuff_timer_end_timeout"]
